--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,21 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap');
+@import "variableGlobal";
+@import "fuentes";
+@import "generales";
 
-{
-    margin:0;
-    padding:0;
-}
-
-body{
-    background-color: black;
-    text-align: center;
-    font-style: normal;
-    font-weight: lighter;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-
-}
 
 header{
     font-style: italic;
@@ -26,6 +12,11 @@ header{
     padding: 10%;
     display: grid;
     justify-content: center;
+}
+
+.container-fluid{
+    background-color: darkgray;
+
 }
 
 nav ul{
