--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -4,8 +4,8 @@
 }
 
 body{
-    background-color: black;
-    text-align: center;
+    background-color: $black;
+    text-align: $text-align;
     font-style: normal;
     font-weight: lighter;
     font-family: 'Roboto', sans-serif;
