--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,18 +1,10 @@
 @import "variableGlobal";
 @import "fuentes";
 @import "generales";
+@import "index";
 
 
-header{
-    font-style: italic;
-    font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    text-align: center;
-    padding: 10%;
-    display: grid;
-    justify-content: center;
-}
+
 
 .container-fluid{
     background-color: darkgray;
