--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -7,4 +7,14 @@ header{
     padding: 10%;
     display: grid;
     justify-content: center;
+
+}
+
+.container-fluid{
+    background-color: darkgray;
+
+}
+
+h2:hover{
+    transform: scale(0,9);
 }
