--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -14,3 +14,37 @@ body{
     min-height: 100vh;
 
 }
+
+a{
+    text-decoration: none;
+    color: #fc5404;
+    font-weight: bold;
+}
+
+h1, h2{
+    text-decoration: none;
+    color: #fc5404;
+    font-weight: normal;
+}
+
+
+p{
+    padding: 1em;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    font-weight: normal;
+    color: #fc5404;
+}
+
+img{
+    border: 10px solid #fc5404;
+    width: 250px;
+    height: auto;
+    margin-top: 10px;
+       
+}
+
+img:hover{
+    transform: scale(0.9);
+}
