--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,4 +7,11 @@ footer{
     margin-bottom: 0;
     margin-top: 1em;
     padding: 1em;
+
+
+    @media (min-width:1024px)
+        {
+            background-color: black;
+            color: #fc5404;
+        }
 }
