--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -13,6 +13,11 @@ body{
     flex-direction: column;
     min-height: 100vh;
 
+    @media (min-width:1024px){
+        background: rgb(253,167,4);
+        background: linear-gradient(0deg, rgba(253,167,4,1) 2%, rgba(22,20,19,0.7567401960784313) 82%);
+    }
+
 }
 
 a{
@@ -25,6 +30,10 @@ h1, h2{
     text-decoration: none;
     color: #fc5404;
     font-weight: normal;
+
+    @media (min-width:1024px){
+        color: black;
+    }
 }
 
 
@@ -35,6 +44,10 @@ p{
     font-size: medium;
     font-weight: normal;
     color: #fc5404;
+
+    @media (min-width:1024px){
+        color: black;
+    }
 }
 
 img{
@@ -42,6 +55,23 @@ img{
     width: 250px;
     height: auto;
     margin-top: 10px;
+
+    @media (min-width:500px){
+            width: 350px;
+            height: auto;
+        }
+
+    @media (min-width:768px){
+            width: 200px;
+            height: auto;
+        }
+
+    @media (min-width:1024px){
+            width: 475px;
+            height: auto;
+            margin: 20px;
+            border: 10px solid black;
+        }
        
 }
 
