--- a/style/estilos.css
+++ b/style/estilos.css
@@ -14,6 +14,12 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+@media (min-width: 1024px) {
+  body {
+    background: rgb(253, 167, 4);
+    background: linear-gradient(0deg, rgb(253, 167, 4) 2%, rgba(22, 20, 19, 0.7567401961) 82%);
+  }
+}
 
 a {
   text-decoration: none;
@@ -26,6 +32,11 @@ h1, h2 {
   color: #fc5404;
   font-weight: normal;
 }
+@media (min-width: 1024px) {
+  h1, h2 {
+    color: black;
+  }
+}
 
 p {
   padding: 1em;
@@ -35,12 +46,37 @@ p {
   font-weight: normal;
   color: #fc5404;
 }
+@media (min-width: 1024px) {
+  p {
+    color: black;
+  }
+}
 
 img {
   border: 10px solid #fc5404;
   width: 250px;
   height: auto;
   margin-top: 10px;
+}
+@media (min-width: 500px) {
+  img {
+    width: 350px;
+    height: auto;
+  }
+}
+@media (min-width: 768px) {
+  img {
+    width: 200px;
+    height: auto;
+  }
+}
+@media (min-width: 1024px) {
+  img {
+    width: 475px;
+    height: auto;
+    margin: 20px;
+    border: 10px solid black;
+  }
 }
 
 img:hover {
@@ -88,6 +124,12 @@ footer {
   margin-top: 1em;
   padding: 1em;
 }
+@media (min-width: 1024px) {
+  footer {
+    background-color: black;
+    color: #fc5404;
+  }
+}
 
 header {
   grid-area: header;
@@ -131,7 +173,6 @@ footer {
   gap: 20px;
   grid-template-columns: 1fr;
 }
-
 @media (min-width: 500px) {
   .grilla {
     display: grid;
@@ -139,24 +180,10 @@ footer {
     grid-template-areas: "header           header" "nav              nav" "foto-portada     foto-portada" "speech           speech" "foto-consul      foto-consul" "speech2          speech2" "foto-consul2     foto-consul2" "speech3          speech3" "footer           footer";
     gap: 20px;
   }
-  nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: darkgray;
-  }
-  header {
+  .grilla header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
-  }
-  img {
-    width: 350px;
-    height: auto;
-  }
-  footer {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) {
@@ -167,51 +194,25 @@ footer {
     gap: 20px;
     margin-bottom: 0;
   }
-  nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  img {
-    width: 200px;
-    height: auto;
-  }
-  header {
+  .grilla header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
   }
 }
 @media (min-width: 1024px) {
-  body {
-    background: rgb(253, 167, 4);
-    background: linear-gradient(0deg, rgb(253, 167, 4) 2%, rgba(22, 20, 19, 0.7567401961) 82%);
+  .grilla {
+    display: grid;
+    grid-template-columns: 1fr 3fr 3fr;
+    grid-template-areas: "header         header           header" "nav            nav              nav" "foto-portada   speech           speech" "foto-portada   speech           speech" "foto-consul    speech2          speech2" "foto-consul    speech2          speech2" "foto-consul2   speech3          speech3" "foto-consul2   speech3          speech3" "footer         footer           footer";
+    gap: 20px;
+    margin-bottom: 0;
   }
-  p, h2 {
-    color: black;
-  }
-  img {
-    width: 475px;
-    height: auto;
-    margin: 20px;
-    border: 10px solid black;
-  }
-  .click {
-    color: #fc5404;
-  }
-  nav ul {
-    padding: 10px;
-    background-color: black;
-  }
-  header {
-    margin: 0;
-    padding: 0;
-  }
-  footer {
-    background-color: black;
+  .grilla .click {
     color: #fc5404;
   }
 }
+
 header {
   grid-area: header;
 }
@@ -242,7 +243,6 @@ nav {
   gap: 20px;
   grid-template-columns: 1fr;
 }
-
 @media (min-width: 500px) {
   .grilla-sobre-mi {
     border: 10px solid darkgray;
@@ -251,13 +251,10 @@ nav {
     grid-template-areas: "header           header" "nav              nav" "intro            intro" "proyecto         proyecto" "gracias          gracias" "footer           footer";
     gap: 20px;
   }
-  header {
+  .grilla-sobre-mi header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
-  }
-  footer {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) {
@@ -268,11 +265,7 @@ nav {
     gap: 20px;
     margin-bottom: 0;
   }
-  img {
-    width: 200px;
-    height: auto;
-  }
-  header {
+  .grilla-sobre-mi header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
@@ -282,11 +275,12 @@ nav {
   .grilla-sobre-mi {
     border: 0px;
   }
-  header {
+  .grilla-sobre-mi header {
     margin: 0;
     padding: 0;
   }
 }
+
 header {
   grid-area: header;
 }
@@ -333,7 +327,6 @@ footer {
   gap: 20px;
   grid-template-columns: 1fr;
 }
-
 @media (min-width: 500px) {
   .grilla-planes {
     display: grid;
@@ -341,13 +334,10 @@ footer {
     grid-template-areas: "header             header" "nav                nav" "introplanes        introplanes" "definicion         definicion" "aumento-mm         aumento-mm" "cambio-de-habitos  cambio-de-habitos" "low-carbs          low-carbs" "vegetariano        vegetariano" "ayuno              ayuno" "aclaracion         aclaracion" "footer             footer";
     gap: 20px;
   }
-  header {
+  .grilla-planes header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
-  }
-  footer {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) {
@@ -358,11 +348,7 @@ footer {
     gap: 20px;
     margin-bottom: 0;
   }
-  img {
-    width: 200px;
-    height: auto;
-  }
-  header {
+  .grilla-planes header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
@@ -372,11 +358,12 @@ footer {
   .grilla-planes {
     border: 0px;
   }
-  header {
+  .grilla-planes header {
     margin: 0;
     padding: 0;
   }
 }
+
 header {
   grid-area: header;
 }
@@ -435,7 +422,6 @@ nav {
   gap: 20px;
   grid-template-columns: 1fr;
 }
-
 @media (min-width: 500px) {
   .grilla-combos {
     display: grid;
@@ -443,13 +429,10 @@ nav {
     grid-template-areas: "header             header" "nav                nav" "introcombos        introcombos" "introfuerza        introfuerza" "principiante       principiante" "intermedio         intermedio" "avanzado           avanzado" "aclaracion         aclaracion" "introyoga          introyoga" "yoga-inicial       yoga-inicial" "yoga-avanzado      yoga-avanzado" "yoga-meditacion    yoga-meditacion" "footer             footer";
     gap: 20px;
   }
-  header {
+  .grilla-combos header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
-  }
-  footer {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) {
@@ -460,11 +443,7 @@ nav {
     gap: 20px;
     margin-bottom: 0;
   }
-  img {
-    width: 200px;
-    height: auto;
-  }
-  header {
+  .grilla-combos header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
@@ -472,17 +451,18 @@ nav {
 }
 @media (min-width: 1024px) {
   .grilla-combos {
+    border: 0px;
     display: grid;
-    grid-template-columns: 1fr 3fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "header             header                header" "nav                nav                   nav" "introcombos        introcombos           introcombos" "introfuerza        introfuerza           introfuerza" "principiante       intermedio            avanzado" "principiante       intermedio            avanzado" "intermedio         intermedio            avanzado" "aclaracion         aclaracion            aclaracion" "introyoga          introyoga             introyoga" "yoga-inicial       yoga-avanzado         yoga-meditacion" "yoga-inicial       yoga-avanzado         yoga-meditacion" "yoga-inicial       yoga-avanzado         yoga-meditacion" "footer             footer                footer";
     gap: 20px;
-    margin-bottom: 0;
   }
-  header {
+  .grilla-combos header {
     margin: 0;
     padding: 0;
   }
 }
+
 header {
   grid-area: header;
 }
@@ -525,9 +505,6 @@ footer {
   .video {
     width: 460px;
     height: 300px;
-  }
-  footer {
-    margin-bottom: 0;
   }
 }
 @media (min-width: 768px) {
