--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,4 +1,5 @@
 @import "variableGlobal";
+@import "operaciones";
 @import "fuentes";
 @import "generales";
 @import "index";
@@ -568,11 +569,10 @@ footer{
     ;
     gap: 20px;
     grid-template-columns: 1fr;
-}
+
 
 
 @media (min-width:500px){
-    .grilla-mundo{
     display: grid;
     grid-template-columns: auto;
     grid-template-areas: 
@@ -583,7 +583,7 @@ footer{
     "footer           footer"
     ;
     gap: 20px;
-    } 
+    
 
 
     header{
@@ -601,7 +601,6 @@ footer{
 
 
 @media (min-width:768px){
-    .grilla-mundo{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-areas: 
@@ -614,7 +613,6 @@ footer{
             gap: 20px;
             margin-bottom: 0;
             
-    }
 
 
     header{
@@ -632,9 +630,8 @@ footer{
 }
 
 @media (min-width:1024px){
-    .grilla-mundo{
         border: 0px;
-    }
+    
      
 
     header{
@@ -647,4 +644,5 @@ footer{
         align-items: center;
     }
 
+}
 }
