--- a/style/estilos.css
+++ b/style/estilos.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap");
+.estilo-nav-bar, .container-fluid {
+  background-color: darkgray;
+}
+
+.container-fluid {
+  height: 50px;
+  width: auto;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -92,10 +101,6 @@ header {
   padding: 10%;
   display: grid;
   justify-content: center;
-}
-
-.container-fluid {
-  background-color: darkgray;
 }
 
 h2:hover {
@@ -489,7 +494,6 @@ footer {
   gap: 20px;
   grid-template-columns: 1fr;
 }
-
 @media (min-width: 500px) {
   .grilla-mundo {
     display: grid;
@@ -497,12 +501,12 @@ footer {
     grid-template-areas: "header           header" "nav              nav" "intromundo       intromundo" "grasa-musculo    grasa-musculo" "footer           footer";
     gap: 20px;
   }
-  header {
+  .grilla-mundo header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
   }
-  .video {
+  .grilla-mundo .video {
     width: 460px;
     height: 300px;
   }
@@ -515,12 +519,12 @@ footer {
     gap: 20px;
     margin-bottom: 0;
   }
-  header {
+  .grilla-mundo header {
     margin: 0;
     padding: 0;
     margin-top: 10px;
   }
-  .video {
+  .grilla-mundo .video {
     width: 460px;
     height: auto;
     align-items: center;
@@ -530,11 +534,11 @@ footer {
   .grilla-mundo {
     border: 0px;
   }
-  header {
+  .grilla-mundo header {
     margin: 0;
     padding: 0;
   }
-  .video {
+  .grilla-mundo .video {
     width: 460px;
     height: auto;
     align-items: center;
